added validate api rote for getting user id and role
